--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native": "^0.71.4",
     "react-native-web": "^0.18.12",
     "react-scripts": "5.0.1",
+    "uid": "^2.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
